fix(dropdown): 🐛 remove unnecessary content-visibility on icons

--- a/resources/skins.citizen.styles/components/Dropdown.less
+++ b/resources/skins.citizen.styles/components/Dropdown.less
@@ -19,10 +19,6 @@
 		&:empty {
 			display: none;
 		}
-
-		.citizen-ui-icon {
-			content-visibility: hidden;
-		}
 	}
 
 	&-summary {
@@ -68,10 +64,6 @@
 					transition-delay: var( --transition-delay-menu );
 					transition-timing-function: var( --transition-timing-function-ease-out );
 					transition-duration: var( --transition-duration-medium );
-				}
-
-				.citizen-ui-icon {
-					content-visibility: visible;
 				}
 			}
 
